llvm/test/MC/EraVM/asm-parser/data-errors.s
; RUN: not llvm-mc -triple eravm -o - < %s 2>&1 > %t.stdout | FileCheck %s
; RUN: FileCheck --check-prefix=STDOUT %s < %t.stdout

; STDOUT:     .text
; STDOUT:     .rodata
; STDOUT-NOT: {{.+}}

  .text
.linker_symbol:
  .linker_symbol_cell  @"library:id"

.linker_symbol1:
  .linker_symbol_cell  @"library:id"

  .rodata
  .cell 1 2
  .cell 1, 2
  .cell x
  .cell 1 + 2
  .cell 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1



; COM: Autogenerated checks below, see README.md.
; CHECK: duplicating library symbols
; CHECK:       <stdin>:{{[0-9]+}}:11: error: expected newline
; CHECK-NEXT:    .cell 1 2
; CHECK-NEXT:            ^
; CHECK:       <stdin>:{{[0-9]+}}:10: error: expected newline
; CHECK-NEXT:    .cell 1, 2
; CHECK-NEXT:           ^
; CHECK:       <stdin>:{{[0-9]+}}:9: error: integer literal expected
; CHECK-NEXT:    .cell x
; CHECK-NEXT:          ^
; CHECK:       <stdin>:{{[0-9]+}}:11: error: expected newline
; CHECK-NEXT:    .cell 1 + 2
; CHECK-NEXT:            ^
; CHECK:       <stdin>:{{[0-9]+}}:9: error: integer too wide
; CHECK-NEXT:    .cell 0x1234567890abcdef1234567890abcdef1234567890abcdef1234567890abcdef1
; CHECK-NEXT:          ^
